# aoc2022

./: .gitignore  dev-fail-debug-log.txt  setup.cfg
non_python_solutions/day1/: day1.sh
src/day02/: tournament.py
src/day03/: rucksack_supplies.py
src/day06/: marker.py
src/day07/: nix_fs.py
src/day10/: signal.py
src/day11/: keep_away.py
src/day18/: lava.py
src/day4/: assignments.py
src/day5/: rearrangement.py
src/day7/: nix_fs.py
src/day8/: treehouse.py
src/day9/: rope_bridge.py
tests/: test_assignments.py  test_keep_away.py  test_lava.py  test_marker.py  test_nix_fs.py  test_rearrangement.py  test_rope_bridge.py  test_rucksack_supplies.py  test_signal.py  test_tournament.py  test_treehouse.py
