[metadata]
name = bludano-aoc2022

[options]
packages = find:
package_dir =
    =src
install_requires = 

[options.extras_require]
test =
    pytest
    pytest-cov
    ipdb

[options.packages.find]
where = src

[tool:pytest]
addopts = --pdbcls=IPython.terminal.debugger:TerminalPdb
testpaths = 
    tests

# [options.entry_points]
